force-app/main/default/objects/Month__c/Month__c.object-meta.xml
<CustomObject>
    <label>Month</label>
    <nameField>
        <label>Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Month</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>