force-app/main/default/objects/Month__c/fields/Average_Monthly_Steps__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Steps__c</fullName>
    <formula>Total_Monthly_Steps__c /  Number_of_Complete_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Monthly Steps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>