force-app/main/default/objects/Month__c/fields/Average_Screen_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Screen_Time__c</fullName>
    <formula>Total_Screen_Time__c / Number_of_Complete_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Screen Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>