force-app/main/default/objects/Month__c/fields/Drinks_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Drinks_per_Week__c</fullName>
    <formula>Monthly_Alcoholic_Drinks_Drank__c / Weeks_in_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drinks per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>