force-app/main/default/objects/Month__c/fields/Liters_of_Water_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Liters_of_Water_per_Week__c</fullName>
    <formula>Monthly_Liters_of_Water_Drank__c /  Weeks_in_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liters of Water per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>