force-app/main/default/objects/Month__c/fields/Month_18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Month_18_Character_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month 18 Character ID</label>
    <type>Text</type>
</CustomField>