force-app/main/default/objects/Month__c/fields/Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Number__c</fullName>
    <label>Month Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>