force-app/main/default/objects/Month__c/fields/Monthly_Alcoholic_Drinks_Drank__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Alcoholic_Drinks_Drank__c</fullName>
    <label>Monthly Alcoholic Drinks Drank</label>
    <summarizedField>Day__c.Daily_Alcoholic_Drinks_Drank__c</summarizedField>
    <summaryForeignKey>Day__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>