force-app/main/default/objects/Month__c/fields/Monthly_Gallons_of_Water_Drank__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gallons_of_Water_Drank__c</fullName>
    <formula>Monthly_Liters_of_Water_Drank__c * 0.264172</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Gallons of Water Drank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>