force-app/main/default/objects/Month__c/fields/Monthly_Liters_of_Water_Drank__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Liters_of_Water_Drank__c</fullName>
    <label>Monthly Liters of Water Drank</label>
    <summarizedField>Day__c.Daily_Liters_of_Water_Drank__c</summarizedField>
    <summaryForeignKey>Day__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>