force-app/main/default/objects/Month__c/fields/Monthly_Miles_Run__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Miles_Run__c</fullName>
    <label>Monthly Miles Run</label>
    <summarizedField>Week__c.Weekly_Miles_Run__c</summarizedField>
    <summaryForeignKey>Week__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>