force-app/main/default/objects/Month__c/fields/Monthly_Pushups__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pushups__c</fullName>
    <label>Monthly Pushups</label>
    <summarizedField>Day__c.Daily_Pushups__c</summarizedField>
    <summaryForeignKey>Day__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>