force-app/main/default/objects/Month__c/fields/Monthly_Score__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Score__c</fullName>
    <formula>Total_Monthly_Points_Scored__c /  Total_Monthly_Points_Possible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>