force-app/main/default/objects/Month__c/fields/Number_of_Complete_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Complete_Days__c</fullName>
    <label>Number of Complete Days</label>
    <summaryForeignKey>Day__c.Month__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>