force-app/main/default/objects/Month__c/fields/Total_Monthly_Points_Possible__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Points_Possible__c</fullName>
    <label>Total Monthly Points Possible</label>
    <summarizedField>Day__c.Total_Daily_Points__c</summarizedField>
    <summaryForeignKey>Day__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>