force-app/main/default/objects/Month__c/fields/Total_Monthly_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Steps__c</fullName>
    <label>Total Monthly Steps</label>
    <summarizedField>Day__c.Daily_Steps__c</summarizedField>
    <summaryForeignKey>Day__c.Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>