force-app/main/default/objects/Month__c/fields/Weeks_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Weeks_in_Month__c</fullName>
    <label>Weeks in Month</label>
    <summaryForeignKey>Week__c.Month__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>