force-app/main/default/objects/Month__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Monthly_Score__c</columns>
    <columns>Monthly_Alcoholic_Drinks_Drank__c</columns>
    <columns>Monthly_Liters_of_Water_Drank__c</columns>
    <columns>Monthly_Gallons_of_Water_Drank__c</columns>
    <columns>External_Month_SFID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>